--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,17 +7,13 @@ authors = ["Jesper Fridefors <jesper.fridefors@gmail.com>","Lolirofle <lolipoppl
 epoxy = "*"
 image = "*"
 gdk = "*"
+gdk-sys = "*"
 gl = "*"
 glium = "*"
 libc = "*"
 shared_library = "*"
+vecmath = "*"
 
 [dependencies.gtk]
 version = "*"
 features = ["v3_16"]
-
-[dependencies.png]
-git = "https://github.com/Lolirofle/image-png"
-
-[dependencies.sdl2]
-git = "https://github.com/AngryLawyer/rust-sdl2"
